finished up the styling of the site

--- a/html/quizSite.html
+++ b/html/quizSite.html
@@ -11,6 +11,8 @@
 
         <!-- linking the css -->
         <link rel="stylesheet" href="../css/quizSite.css">
+
+        <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     </head>
 
     <body>
